# adora.com

./: README.md  generate.js  package-lock.json  package.json
backend/: main.go
components/: category-grid.tsx  category-page.tsx  cookie-consent.tsx  editorial.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  product-card.tsx  product-carousel.tsx  promo-banner.tsx  providers.tsx  splash-screen.tsx  testimonials.tsx
rust-payments-example/: Cargo.toml
rust-payments-example/src/: main.rs
src/: data.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/brands/: page.tsx
src/app/category/[slug]/: page.tsx
src/app/checkout/: page.tsx
src/app/checkout/rust-payment/: page.tsx
src/app/checkout/success/: page.tsx
src/app/kids/: page.tsx
src/app/login/: page.tsx
src/app/men/: page.tsx
src/app/new-in/: page.tsx
src/app/orders/: page.tsx
src/app/product/[slug/]/: page.tsx
src/app/product/[slug]/: page.tsx
src/app/product/sneaker-1/: page.tsx
src/app/register/: page.tsx
src/app/sale/: page.tsx
src/app/underwear/: page.tsx
src/app/women/: page.tsx
src/components/: CartDrawer.tsx  CommunitySection.tsx  FavouritePicks.tsx  Footer.tsx  Header.tsx  Hero.tsx  HeroBanner.tsx  ProductCard.tsx  ProductCarousel.tsx  Providers.tsx  RustCheckoutButton.tsx  ShopByCollection.tsx  StatsBar.tsx  WhatsAppButton.tsx
src/context/: AuthContext.tsx  CartContext.tsx  WishlistContext.tsx
src/lib/: firebase.ts
